Implementa paginação em revenda e busca asc em get(revenda, usuario e oportunidade)